# copernicus-s2-pipeline

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  pyproject.toml  s2pipe_local_launcher.ipynb
.github/workflows/: ci.yml
examples/configs/: download.yaml  preprocess.yaml  preprocess_apply.yaml  preprocess_stats.yaml
notebooks/: s2pipe_step1_download_local.ipynb  s2pipe_step2_preprocess_local.ipynb
src/s2pipe/: cfg.py  cli.py  pipeline.py
src/s2pipe/cdse/: auth.py  http.py  odata.py  select.py
src/s2pipe/download/: auth.py  cfg.py  download.py  export.py  http.py  manifest.py  nodes.py  odata.py  paths.py  pipeline.py  select.py
src/s2pipe/io/: export.py  manifest.py  paths.py
src/s2pipe/ml/: patches.py  preprocess.py  shards.py
src/s2pipe/preprocess/: __init__.py  angles.py  cfg.py  export.py  inputs.py  labels.py  normalize.py  radiometry.py  raster.py  resample.py  run.py
tests/fixtures/: README.md
tests/fixtures/single_tile/meta/step1/: index.json
tests/fixtures/single_tile/raw/L1C/tile=T33UWQ/sensing=20251210T100319Z/files/: MTD_MSIL1C.xml  MTD_TL.xml  T33UWQ_20251210T100319_B01.jp2  T33UWQ_20251210T100319_B02.jp2
tests/fixtures/single_tile/raw/L2A/tile=T33UWQ/sensing=20251210T100319Z/files/: MTD_TL.xml  T33UWQ_20251210T100319_SCL_20m.jp2
tests/preprocess/: test_angles.py  test_angles_integration.py  test_export.py  test_inputs.py  test_labels.py  test_normalize.py  test_radiometry_integration.py  test_raster_resample_to_20m.py  test_run_integration.py  test_run_integration_angles_asset.py
