[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s2pipe"
version = "0.2.0"
description = "Sentinel-2 CDSE download and process pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "requests>=2.31",
  "tqdm>=4.66",
  "shapely>=2.0",
  "pyproj>=3.6",
  "pandas>=2.1",
  "openpyxl>=3.1",
  "PyYAML>=6.0",
  # Used by preprocess / raster work / tests
  "numpy",
  "rasterio",
  "affine",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
s2pipe = "s2pipe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "integration: integration tests requiring external/fixture data",
]
